--- a/play.html
+++ b/play.html
@@ -5,5 +5,36 @@
     </head>
     <body>
         <h1>Tanner Presents</h1>
+        <h3>Romeo and Juliet</h3>
+        <h5>Act I Scene I<br>
+            Act 1, Scene 1 of Romeo and Juliet begins with a street brawl between 
+            the Montagues and Capulets. The Prince intervenes, warning of severe 
+            consequences. Later, Romeo is introduced, heartbroken over unrequited 
+            love for Rosaline.
+        </h5>
+        <p>
+           SCENE I. Verona. A public place.
+            Enter SAMPSON and GREGORY, of the house of Capulet, armed with swords and bucklers
+            SAMPSON
+            Gregory, o' my word, we'll not carry coals.
+            GREGORY
+            No, for then we should be colliers.
+            SAMPSON
+            I mean, an we be in choler, we'll draw.
+            GREGORY
+            Ay, while you live, draw your neck out o' the collar.
+            SAMPSON
+            I strike quickly, being moved.
+            GREGORY
+            But thou art not quickly moved to strike.
+            SAMPSON
+            A dog of the house of Montague moves me.
+            GREGORY
+            To move is to stir; and to be valiant is to stand:
+            therefore, if thou art moved, thou runn'st away.
+            SAMPSON
+            A dog of that house shall move me to stand: I will
+            take the wall of any man or maid of Montague's. 
+        </p>
     </body>
 </html>
