formatted the content (part 4)

--- a/play.html
+++ b/play.html
@@ -13,28 +13,28 @@
             love for Rosaline.
         </h5>
         <p>
-           SCENE I. Verona. A public place.
-            Enter SAMPSON and GREGORY, of the house of Capulet, armed with swords and bucklers
-            SAMPSON
-            Gregory, o' my word, we'll not carry coals.
-            GREGORY
-            No, for then we should be colliers.
-            SAMPSON
-            I mean, an we be in choler, we'll draw.
-            GREGORY
-            Ay, while you live, draw your neck out o' the collar.
-            SAMPSON
-            I strike quickly, being moved.
-            GREGORY
-            But thou art not quickly moved to strike.
-            SAMPSON
-            A dog of the house of Montague moves me.
-            GREGORY
-            To move is to stir; and to be valiant is to stand:
-            therefore, if thou art moved, thou runn'st away.
-            SAMPSON
-            A dog of that house shall move me to stand: I will
-            take the wall of any man or maid of Montague's. 
+           <h3>SCENE I. Verona. A public place.</h3>
+            <p>Enter SAMPSON and GREGORY, of the house of Capulet, armed with swords and bucklers</p>
+            <h5>SAMPSON</h5>
+            <p>Gregory, o' my word, we'll not carry coals.</p>
+            <h5>GREGORY</h5>
+            <p>No, for then we should be colliers.</p>
+            <h5>SAMPSON</h5>
+            <p>I mean, an we be in choler, we'll draw.</p>
+            <h5>GREGORY</h5>
+            <p>Ay, while you live, draw your neck out o' the collar.</p>
+            <h5>SAMPSON</h5>
+            <p>I strike quickly, being moved.</p>
+            <h5>GREGORY</h5>
+            <p>But thou art not quickly moved to strike.</p>
+            <h5>SAMPSON</h5>
+            <p>A dog of the house of Montague moves me.</p>
+            <h5>GREGORY</h5>
+            <p>To move is to stir; and to be valiant is to stand:
+                therefore, if thou art moved, thou runn'st away.</p>
+                <h5>SAMPSON</h5>
+            <p>A dog of that house shall move me to stand: I will
+                take the wall of any man or maid of Montague's. </p>
         </p>
     </body>
 </html>
