--- a/play.html
+++ b/play.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Shakespeare Play</title>
+        <link rel="stylesheet" href="shakespeare.css">
     </head>
     <body>
         <h1>Tanner Presents</h1>
@@ -14,27 +15,44 @@
         </h5>
         <p>
            <h3>SCENE I. Verona. A public place.</h3>
-            <p>Enter SAMPSON and GREGORY, of the house of Capulet, armed with swords and bucklers</p>
-            <h5>SAMPSON</h5>
-            <p>Gregory, o' my word, we'll not carry coals.</p>
-            <h5>GREGORY</h5>
-            <p>No, for then we should be colliers.</p>
-            <h5>SAMPSON</h5>
-            <p>I mean, an we be in choler, we'll draw.</p>
-            <h5>GREGORY</h5>
-            <p>Ay, while you live, draw your neck out o' the collar.</p>
-            <h5>SAMPSON</h5>
-            <p>I strike quickly, being moved.</p>
-            <h5>GREGORY</h5>
-            <p>But thou art not quickly moved to strike.</p>
-            <h5>SAMPSON</h5>
-            <p>A dog of the house of Montague moves me.</p>
-            <h5>GREGORY</h5>
-            <p>To move is to stir; and to be valiant is to stand:
+            <p class="stage-direction">Enter SAMPSON and GREGORY, of the house of Capulet, armed with swords and bucklers</p>
+            <h5 class="sampson">SAMPSON</h5>
+            <p class="speech">Gregory, o' my word, we'll not carry coals.</p>
+            <h5 class="gregory">GREGORY</h5>
+            <p class="speech">No, for then we should be colliers.</p>
+            <h5 class="sampson">SAMPSON</h5>
+            <p class="speech">I mean, an we be in choler, we'll draw.</p>
+            <h5 class="gregory">GREGORY</h5>
+            <p class="speech">Ay, while you live, draw your neck out o' the collar.</p>
+            <h5 class="sampson">SAMPSON</h5>
+            <p class="speech">I strike quickly, being moved.</p>
+            <h5 class="gregory">GREGORY</h5>
+            <p class="speech">But thou art not quickly moved to strike.</p>
+            <h5 class="sampson">SAMPSON</h5>
+            <p class="speech">A dog of the house of Montague moves me.</p>
+            <h5 class="gregory">GREGORY</h5>
+            <p class="speech">To move is to stir; and to be valiant is to stand:
                 therefore, if thou art moved, thou runn'st away.</p>
-                <h5>SAMPSON</h5>
-            <p>A dog of that house shall move me to stand: I will
+            <h5 class="sampson">SAMPSON</h5>
+            <p class="speech">A dog of that house shall move me to stand: I will
                 take the wall of any man or maid of Montague's. </p>
         </p>
+        <table>
+            <tr>
+                <th>Character</th>
+                <th>Actor</th>
+                <th>Offer</th>
+            </tr>
+            <tr>
+                <td>Sampson</td>
+                <td>Robert Downey Jr.</td>
+                <td>$3 million</td>
+            </tr>
+            <tr>
+                <td>Gregory</td>
+                <td>Sylvester Stallone</td>
+                <td>$2 million</td>
+            </tr>
+        </table>
     </body>
 </html>
