added play2 (part 8)

--- a/play.html
+++ b/play.html
@@ -54,5 +54,6 @@
                 <td>$2 million</td>
             </tr>
         </table>
+        <a href="play2.html">Continue the play...</a>
     </body>
 </html>
